istio/ecommerce-microservices/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: ecommerce
spec:
  mtls:
    mode: STRICT

# Sécurise toutes les communications internes, peut être vérifié dans Kiali
